# glue-cur-pipeline

./: .gitignore  README.md  pyproject.toml
customer-pipeline/terraform/: glue.tf  s3.tf
finops-pipeline/terraform/: cur.tf  iam.tf  iam_finops.tf  provider.tf  variables.tf
scripts/: customer_pipeline.py
tags/: activate_tags.sh
terraform/: iam.tf  s3.tf  variables.tf
