[project]
name = "glue-cur-pipeline"
version = "0.1.0"
description = "AWS Glue ETL pipeline for customer data processing"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.28.0",
    "pytest>=7.4.0",
    "pylint>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100